clase 14 media query

--- a/clase 10/index.html
+++ b/clase 10/index.html
@@ -13,6 +13,9 @@
         <h1>Heroes</h1>
     </header>
     <main>
+        <div class="btn">
+            <button>+</button>
+        </div>
         <section class="heroes">
             <div class="card batman">
                 <div class="fav_icon">
@@ -45,6 +48,23 @@
                 <div class="view_more">
                     <a href="#">Ver Mas</a>
                 </div>
+            </div>
+            <div class="card batman">
+                <div class="fav_icon">
+                    <img src="img/Vector.svg" alt="fav icon">
+                </div>
+                <div class="profile_picture">
+                    <img src="img/batman_profile_picture.png" alt="">
+                </div>
+                <div class="profile_info">
+                    <h2>BATMAN</h2>
+                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
+                    </p>
+                </div>
+                <div class="view_more">
+                    <a href="#">Ver Mas</a>
+                </div>
+            
             </div>
             <div class="card batman">
                 <div class="fav_icon">
